--- a/app/views/spree/admin/shared/_language_dropdown.html.erb
+++ b/app/views/spree/admin/shared/_language_dropdown.html.erb
@@ -3,10 +3,10 @@
   object_prefix = "#{object_name}_"
 %>
 
-<%= select("currently_modified_language", "lang", SpreeMultiLingual.languages.collect {|l| l}, {selected: I18n.locale}, {id: "spree_multi_lingual_dropdown"}) %>
+<%= select("currently_modified_language", "lang", SpreeMultiLingual.languages.collect {|l| l}, {"selected" => I18n.locale}, {"id" => "spree_multi_lingual_dropdown"}) %>
 <script>
   window.spree_multi_lingual = {};
-  window.spree_multi_lingual.translated_fields = <%= raw klass.translated_attribute_names.map { |f| object_prefix + f.to_s } %>;
+  window.spree_multi_lingual.translated_fields = [<%=  klass.translated_attribute_names.map { |f| "'#{object_prefix}#{f.to_s}', " } %>];
   window.spree_multi_lingual.backend_locale = "<%= I18n.locale -%>";
   window.spree_multi_lingual.translated_fields_values = [];
   <% klass.translated_attribute_names.each do |f| %>
